<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fast Ordering</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Fast Ordering</string>
    <string name="title_section1">Accueil</string>
    <string name="title_section2">Commander</string>
    <string name="title_section3">Modifier une commande</string>
    <string name="title_section4">Notifications</string>
    <string name="title_section5">Historique</string>
    <string name="title_section6">Options</string>
    <string name="title_section7">Déconnexion</string>
    <string name="title_section8">A Propos</string>
    <string name="navigation_drawer_open">Ouvre le volet de navigation</string>
    <string name="navigation_drawer_close">Ferme le volet de navigation</string>
    <string name="home_fragment">Home fragment</string>
    <string name="order_fragment">Order fragment</string>
    <string name="modify_fragment">Modify fragment</string>
    <string name="notifications_fragment">Notifications fragment</string>
    <string name="history_fragment">History fragment</string>
    <string name="options_fragment">Options fragment</string>
    <string name="logout_fragment">Logout fragment</string>
    <string name="about_fragment">About fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_activity_bg">bg</string>
    <string name="login_button">CONNEXION</string>
    <string name="login_identifiant">IDENTIFIANT</string>
    <string name="login_pass">CLE</string>
    <string name="login_hint_pass">Clé</string>
    <string name="desc_white_rectangle">White transparent rectangle</string>
    <string name="hint_login">Identifiant</string>
    <string name="desc_view_logo">logo</string>
    <string name="version">Version 1.0.0</string>
    <string name="url_fo">fastordering.fr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_clean">TOUT EFFACER</string>
    <string name="notification_desc_button">Custom button</string>
    <string name="about_logo_desc">Logo FO</string>
    <string name="about_background_desc">Custom background</string>
    <string name="ipsum">kjjjj</string>
    <string name="history_icon_desc">Custom icon</string>
    <string name="notif_icon_desc">Custom icon</string>
    <string name="notif_close_desc">Custom close</string>
    <string name="delete">Effacer</string>
    <string name="notification_list_empty">Aucune notification disponible</string>
    <string name="notification_list_empty_text">Aucune notification</string>
    <string name="history_list_empty_text">Aucun historique</string>
    <string name="dialog_order_close">Fermer</string>
    <string name="dialog_order_title">Détail de commande</string>
    <string name="login_toast_error">Problème de connexion au serveur</string>
    <string name="dialog_order_table">Table #</string>
    <string name="dialog_order_hour">Heure :\u0020</string>
    <string name="dialog_order_pa">PA :\u0020</string>
    <string name="dialog_order_content"></string>
    <string name="on_the">Le\u0020</string>
    <string name="at">\u0020à\u0020</string>
    <string name="home_history_text">Dernières commandes</string>
    <string name="home_notif_text">Dernières notifications</string>
    <string name="home_commander_text">COMMANDER</string>
    <string name="order_compo_add">AJOUTER</string>
    <string name="order_order_send_text">ENVOYER</string>
    <string name="order_menu_none_text">Aucun menu disponible</string>
    <string name="order_compo_none_text">Aucune composition disponible</string>
    <string name="order_card_none_text">Aucune carte disponible</string>
    <string name="notif_text_table">Table #</string>
    <string name="notif_text_point">\u0020:\u0020</string>
    <string name="dialog_order_modify">Modifier</string>
    <string name="order_order_table_text">Table #</string>
    <string name="order_order_pa_text">PA :</string>
    <string name="spinner_title">Chargement</string>
    <string name="spinner_desc">Connexion en cours...</string>
    <string name="card">A la carte</string>
    <string name="menus">Menus</string>
    <string name="order">Commande</string>
    <string name="choose_singular">choisi</string>
    <string name="choose_plural">choisis</string>
    <string name="dialog_box_menu">Menu :\u0020</string>
    <string name="dialog_box_dish">Plat :\u0020</string>
    <string name="dialog_box_option">, options :\u0020</string>
    <string name="dialog_box_comment">, commentaire :\u0020</string>
    <string name="comma">,\u0020</string>
    <string name="login_auth_fail">Authentification échouée</string>
    <string name="order_order_pa_missing">Veuillez remplir le champ PA</string>
    <string name="order_order_table_missing">Veuillez remplir le champ Table #</string>
    <string name="order_order_order_missing">Veuillez ajouter au moins un plat</string>
    <string name="order_added_success">Ajouté à la commande</string>
    <string name="order_send_success">Commande envoyée</string>
    <string name="dialog_options_title">Options</string>
    <string name="dialog_options_positive">Valider</string>
    <string name="dialog_options_cancel">Annuler</string>
    <string name="dialog_option_comtitle">Commentaire</string>
    <string name="dialog_order_globalcom">Commentaire :</string>
</resources>
