<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.eip.fastordering.activity.LoginActivity">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:contentDescription="@string/login_activity_bg"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/white_rect"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/desc_white_rectangle"
        android:src="@drawable/rect">
    </ImageView>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/white_rect"
        android:layout_alignStart="@+id/white_rect"
        android:layout_alignTop="@+id/white_rect"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="30dp"
        android:text="@string/login_identifiant"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/field_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/connexion_button"
        android:layout_alignLeft="@+id/connexion_button"
        android:layout_alignRight="@+id/connexion_button"
        android:layout_alignStart="@+id/connexion_button"
        android:layout_below="@+id/text_login"
        android:layout_marginTop="0dp"
        android:hint="@string/hint_login"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/text_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_login"
        android:layout_alignStart="@+id/text_login"
        android:layout_below="@+id/field_login"
        android:layout_marginTop="15dp"
        android:text="@string/login_pass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/field_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/connexion_button"
        android:layout_alignLeft="@+id/field_login"
        android:layout_alignRight="@+id/connexion_button"
        android:layout_alignStart="@+id/field_login"
        android:layout_below="@+id/text_pass"
        android:layout_marginTop="0dp"
        android:hint="@string/login_hint_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connexion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/white_rect"
        android:layout_alignEnd="@+id/white_rect"
        android:layout_alignLeft="@+id/white_rect"
        android:layout_alignRight="@+id/white_rect"
        android:layout_alignStart="@+id/white_rect"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login_button" />

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/white_rect"
        android:layout_alignEnd="@+id/white_rect"
        android:layout_alignLeft="@+id/white_rect"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/white_rect"
        android:layout_alignStart="@+id/white_rect"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/text_login"
        android:contentDescription="@string/desc_view_logo"
        android:src="@drawable/logo" />

</RelativeLayout>
