<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eip.fastordering.AboutFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/img_bg"
        android:contentDescription="@string/login_activity_bg"
        android:src="@drawable/bg"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true" />

    <ImageView
        android:src="@drawable/rect_gris"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2">
    </ImageView>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo_fastordering"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/about_first_line"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version"
        android:id="@+id/about_second_line"
        android:layout_below="@+id/about_first_line"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/url_fo"
        android:id="@+id/textView"
        android:layout_below="@+id/about_second_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:longClickable="false"
        android:autoLink="web" />

</RelativeLayout>
